--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -35,6 +35,11 @@
           <artifactId>dubbo</artifactId>
           <version>2.7.5</version>
       </dependency>
+    <dependency>
+      <groupId>com.gupaoedu.book.springcloud</groupId>
+      <artifactId>spring-cloud-dubbo-sample-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
