--- a/springboot-consumer/src/main/resources/application.properties
+++ b/springboot-consumer/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-
+server.port=8081
 dubbo.application.name=springboot-consumer
-dubbo.registry.address=zookeeper://192.168.13.106:2181
+#dubbo.registry.address=zookeeper://192.168.13.106:2181
