--- a/spring-cloud-web-demo/pom.xml
+++ b/spring-cloud-web-demo/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
